--- a/CleanArch.Api/CleanArch.Api.csproj
+++ b/CleanArch.Api/CleanArch.Api.csproj
@@ -7,13 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OData" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
 
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CleanArch.Application\CleanArch.Application.csproj" />
+    <ProjectReference Include="..\CleanArch.Core\CleanArch.Core.csproj" />
     <ProjectReference Include="..\CleanArch.Infrastructure\CleanArch.Infrastructure.csproj" />
     <ProjectReference Include="..\CleanArch.Logging\CleanArch.Logging.csproj" />
   </ItemGroup>
