--- a/CleanArch.Api/CleanArch.Api.csproj
+++ b/CleanArch.Api/CleanArch.Api.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CleanArch.Application\CleanArch.Application.csproj" />
-    <ProjectReference Include="..\CleanArch.Core\CleanArch.Core.csproj" />
+    <ProjectReference Include="..\CleanArch.Core\CleanArch.Domain.csproj" />
     <ProjectReference Include="..\CleanArch.Infrastructure\CleanArch.Infrastructure.csproj" />
     <ProjectReference Include="..\CleanArch.Logging\CleanArch.Logging.csproj" />
   </ItemGroup>
