--- a/CleanArch.Infrastructure/CleanArch.Infrastructure.csproj
+++ b/CleanArch.Infrastructure/CleanArch.Infrastructure.csproj
@@ -15,7 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CleanArch.Application\CleanArch.Application.csproj" />
-    <ProjectReference Include="..\CleanArch.Core\CleanArch.Core.csproj" />
+    <ProjectReference Include="..\CleanArch.Core\CleanArch.Domain.csproj" />
   </ItemGroup>
 
 </Project>
